# agentic-loop-PR

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  agentic-loop.yaml  pyproject.toml
.github/workflows/: validate.yml
agentic-loop-traces/: issue-27.md  issue-29.md
agentic_loop/: __init__.py  cli.py  codex_provider.py  command.py  config.py  controller.py  git_client.py  github_cli.py  policy.py  pr_status.py  provider.py  roles.py  state.py  trace.py  validation.py
agentic_loop_assets/: __init__.py
agentic_loop_assets/prompts/: implementer.md  planner.md  remediator.md  reviewer.md
agentic_loop_assets/schemas/: __init__.py  implementation.schema.json  plan.schema.json  remediation.schema.json  review.schema.json
demo/: README.md
demo/issues/: isolated_text_fixture.md
tests/: test_agentic_demo_fixture.py  test_agentic_demo_sample.py  test_codex_provider.py  test_config_and_schema.py  test_controller_integration.py  test_git_and_command.py  test_policy.py  test_pr_status.py  test_state.py  test_trace.py
tests/agentic_demo/: sample.txt
