[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-loop-demo"
version = "0.1.0"
description = "Standalone Python CLI demo for an agentic issue-to-PR loop."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
agentic-loop = "agentic_loop.cli:main"

[tool.setuptools.packages.find]
include = ["agentic_loop*"]

[tool.setuptools.package-data]
agentic_loop = []
agentic_loop_assets = ["prompts/*.md", "schemas/*.json"]
